@@ -89,6 +89,12 @@ Release 1.1 (in development)
 Release 1.0.7 (in development)
 ==============================
 
+* #572: Show warnings by default when reference labels cannot be
+  found.
+
+* #536: Include line number when complaining about missing reference
+  targets in nitpicky mode.
+
 * #590: Fix inline display of graphviz diagrams in LaTeX output.
 
 * #589: Build using app.build() in setup command.
